--- a/Material.Icons.Avalonia/MaterialIcon.xaml
+++ b/Material.Icons.Avalonia/MaterialIcon.xaml
@@ -2,6 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonia="clr-namespace:Material.Icons.Avalonia">
     <Style Selector="avalonia|MaterialIcon">
+        <Style.Resources>
+            <avalonia:GeometryConverter x:Key="GeometryConverter"></avalonia:GeometryConverter>
+        </Style.Resources>
         <Setter Property="Height" Value="16" />
         <Setter Property="Width" Value="16" />
         <Setter Property="HorizontalAlignment" Value="Left" />
@@ -14,7 +17,7 @@
                             BorderThickness="{TemplateBinding BorderThickness}">
                         <Viewbox>
                             <Canvas Width="24" Height="24">
-                                <Path Data="{Binding Data, RelativeSource={RelativeSource TemplatedParent}}"                                   
+                                <Path Data="{Binding Data, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource GeometryConverter}}"                                   
                                       Fill="{TemplateBinding Foreground}" />
                             </Canvas>
                         </Viewbox>
