--- a/Material.Icons.Avalonia.Demo/Views/MainWindow.xaml
+++ b/Material.Icons.Avalonia.Demo/Views/MainWindow.xaml
@@ -5,79 +5,64 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         xmlns:demo="clr-namespace:Material.Icons.Avalonia.Demo"
+        xmlns:system="clr-namespace:System;assembly=System.Runtime.Extensions"
+        xmlns:models="clr-namespace:Material.Icons.Avalonia.Demo.Controls"
+        xmlns:models1="clr-namespace:Material.Icons.Avalonia.Demo.Models"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="800" Height="500"
         x:Class="Material.Icons.Avalonia.Demo.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Material.Icons.Avalonia.Demo">
 
     <Window.Resources>
-        <demo:StringJoinConverter x:Key="StringJoinConverter" />
+        <models1:StringJoinConverter x:Key="StringJoinConverter" Separator="{x:Static system:Environment.NewLine}" />
     </Window.Resources>
+    <Window.Styles>
+        <Style Selector="models|SelectionWrapper:selectednow > Border">
+            <Setter Property="Background" Value="Gray" />
+        </Style>
+    </Window.Styles>
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
     <Grid ColumnDefinitions="*, *, Auto" RowDefinitions="*, Auto">
-        <!-- <ListBox Grid.ColumnSpan="3"  -->
-        <!--          VirtualizationMode="Simple" -->
-        <!--          Items="{Binding Kinds}" -->
-        <!--          SelectedItem="{Binding Group}" -->
-        <!--          ScrollViewer.HorizontalScrollBarVisibility="Disabled"> -->
-        <!--     <ListBox.ItemTemplate> -->
-        <!--         <DataTemplate DataType="demo:PackIconKindGroup"> -->
-        <!--             <DockPanel -->
-        <!--                 ToolTip.Tip="{Binding Aliases, Converter={StaticResource StringJoinConverter}}" -->
-        <!--                 Width="64" -->
-        <!--                 Height="64" -->
-        <!--                 Background="Transparent"> -->
-        <!--                 <TextBlock -->
-        <!--                     Text="{Binding Kind}" -->
-        <!--                     DockPanel.Dock="Bottom" -->
-        <!--                     HorizontalAlignment="Center" /> -->
-        <!-- -->
-        <!--                 <avalonia:MaterialIcon -->
-        <!--                     Kind="{Binding Kind}" -->
-        <!--                     VerticalAlignment="Center" -->
-        <!--                     HorizontalAlignment="Center" -->
-        <!--                     Width="32" -->
-        <!--                     Height="32" /> -->
-        <!--             </DockPanel> -->
-        <!--         </DataTemplate> -->
-        <!--     </ListBox.ItemTemplate> -->
-        <!--     <ListBox.ItemsPanel> -->
-        <!--         <ItemsPanelTemplate> -->
-        <!--             <WrapLayout /> -->
-        <!--         </ItemsPanelTemplate> -->
-        <!--     </ListBox.ItemsPanel> -->
-        <!-- </ListBox> -->
-                       <!-- SelectedItem="{Binding Group}" -->
-        <ItemsRepeater Grid.ColumnSpan="3" 
-                       Items="{Binding Kinds}"
-                       ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-            <ItemsRepeater.Layout>
-                <WrapLayout></WrapLayout>
-            </ItemsRepeater.Layout>
-            <ItemsRepeater.ItemTemplate>
-                <DataTemplate DataType="demo:PackIconKindGroup">
-                    <DockPanel
-                        ToolTip.Tip="{Binding Aliases, Converter={StaticResource StringJoinConverter}}"
-                        Width="64"
-                        Height="64"
-                        Background="Transparent">
-                        <TextBlock
-                            Text="{Binding Kind}"
-                            DockPanel.Dock="Bottom"
-                            HorizontalAlignment="Center" />
+        <ScrollViewer Grid.ColumnSpan="3" VerticalScrollBarVisibility="Visible"
+                      HorizontalScrollBarVisibility="Disabled">
+            <ItemsRepeater Items="{Binding Kinds}"
+                           HorizontalAlignment="Center">
+                <ItemsRepeater.Layout>
+                    <UniformGridLayout />
+                </ItemsRepeater.Layout>
+                <ItemsRepeater.ItemTemplate>
+                    <DataTemplate DataType="models1:PackIconKindGroup">
+                        <models:SelectionWrapper DataSource="{Binding .}"
+                                                 CurrentSelected="{Binding $parent[ItemsRepeater].DataContext.Group, Mode=TwoWay}">
+                            <Border Name="MainBorder">
+                                <DockPanel Margin="2"
+                                           ToolTip.Tip="{Binding Aliases, Converter={StaticResource StringJoinConverter}}"
+                                           Width="64"
+                                           Height="64"
+                                           Background="Transparent">
+                                    <TextBlock
+                                        Text="{Binding Kind}"
+                                        DockPanel.Dock="Bottom"
+                                        FontSize="10"
+                                        HorizontalAlignment="Center" />
 
-                        <avalonia:MaterialIcon
-                            Kind="{Binding Kind}"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
-                            Width="32"
-                            Height="32" />
-                    </DockPanel>
-                </DataTemplate>
-            </ItemsRepeater.ItemTemplate>
-        </ItemsRepeater>
-        <TextBox Grid.Row="1" Grid.Column="0" Text="{Binding SearchText}"></TextBox>
+                                    <avalonia:MaterialIcon
+                                        Kind="{Binding Kind}"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center"
+                                        Width="32"
+                                        Height="32" />
+                                </DockPanel>
+                            </Border>
+                        </models:SelectionWrapper>
+                    </DataTemplate>
+                </ItemsRepeater.ItemTemplate>
+            </ItemsRepeater>
+        </ScrollViewer>
+        <TextBox Grid.Row="1" Grid.Column="0" Text="{Binding SearchText}" Watermark="Search" />
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CopyText^}" IsReadOnly="True" />
     </Grid>
 </Window>
