--- a/Material.Icons.Avalonia/App.xaml
+++ b/Material.Icons.Avalonia/App.xaml
@@ -1,5 +1,10 @@
-<Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="Material.Icons.Avalonia.App">
-    <StyleInclude Source="avares://Material.Icons.Avalonia/MaterialIcon.xaml" />
-</Styles>
+<Style xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style.Resources>
+      <ResourceDictionary>
+        <ResourceDictionary.MergedDictionaries>
+          <ResourceInclude Source="avares://Material.Icons.Avalonia/MaterialIcon.axaml"></ResourceInclude>
+        </ResourceDictionary.MergedDictionaries>
+      </ResourceDictionary>
+    </Style.Resources>
+</Style>
