--- a/Material.Icons.Maui.Demo/AppShell.xaml
+++ b/Material.Icons.Maui.Demo/AppShell.xaml
@@ -8,7 +8,8 @@
     Title="Material.Icons Demo">
 
     <ShellContent
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+      ContentTemplate="{DataTemplate local:MainPage}"
+      Route="Main">
+    </ShellContent>
 
 </Shell>
