Add MaterialIconText control
(cherry picked from commit dada8caf2a57e523226d29dec9da481129272225)

--- a/Material.Icons.Avalonia/MaterialIconStyles.axaml
+++ b/Material.Icons.Avalonia/MaterialIconStyles.axaml
@@ -6,6 +6,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceInclude Source="avares://Material.Icons.Avalonia/MaterialIcon.axaml" />
+        <ResourceInclude Source="avares://Material.Icons.Avalonia/MaterialIconText.axaml" />
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
   </icons:MaterialIconStyles.Resources>
